# netz-noe-smartmeter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  hacs.json  pyproject.toml  pyrightconfig.json  renovate.json
.github/workflows/: hacs.yml  tests.yml
custom_components/netz_noe_smartmeter/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  services.yaml  statistics.py  strings.json  system_health.py
custom_components/netz_noe_smartmeter/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_api.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py  test_statistics.py  test_system_health.py
